disable finale first tanks

--- a/cfg/stripper/zonemod/maps/c5m5_bridge.cfg
+++ b/cfg/stripper/zonemod/maps/c5m5_bridge.cfg
@@ -9,26 +9,26 @@ filter:
 ; =====================================================
 ; ============  PROMOD EARLY TANK ADDITION  ===========
 ; =====================================================
-modify:
-{
-	match:
-	{
-		"targetname" "radio_fake_button"
-	}
-	insert:
-	{
-		"OnPressed" "zombie_tankSpawnZombie0-1"
-	}
-}
-add:
-{
-	"targetname" "zombie_tank"
-	"origin" "-9293 6344 740"
-	"population" "tank"
-	"offer_tank" "1"
-	"angles" "0 0 0"
-	"classname" "info_zombie_spawn"
-}
+; modify:
+; {
+; 	match:
+; 	{
+; 		"targetname" "radio_fake_button"
+; 	}
+; 	insert:
+; 	{
+; 		"OnPressed" "zombie_tankSpawnZombie0-1"
+; 	}
+; }
+; add:
+; {
+; 	"targetname" "zombie_tank"
+; 	"origin" "-9293 6344 740"
+; 	"population" "tank"
+; 	"offer_tank" "1"
+; 	"angles" "0 0 0"
+; 	"classname" "info_zombie_spawn"
+; }
 ; =====================================================
 ; ==============  PROMOD NEW TANK FIGHT  ==============
 ; =====================================================
