--- a/cfg/stripper/zonemod/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/zonemod/maps/c1m1_hotel.cfg
@@ -25,19 +25,26 @@ add:
 ; =====================================================
 ; ================= SAFEROOM WEAPONS ==================
 ; =====================================================
+; --- adds multiple tier 1 shotguns/smgs in the saferoom
 add:
-; --- add tier 1 shotgun/smg in the saferoom
 {
-		"classname" "weapon_shotgun_chrome"
-		"origin" "418 5535 2852"
-		"angles" "8 -7 0"
-		"ammo" "80"
+	"origin" "425 5535 2850"
+	"weapon_selection" "tier1_shotgun"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"count" "5"
+	"angles" "0 270 90"
+	"classname" "weapon_spawn"
 }
+add:
 {
-		"classname" "weapon_smg_silenced"
-		"ammo" "600"
-		"origin" "425 5558 2852"
-		"angles" "3 -13 0"
+	"origin" "425 5558 2850"
+	"weapon_selection" "any_smg"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"count" "5"
+	"angles" "0 90 -90"
+	"classname" "weapon_spawn"
 }
 ; =====================================================
 ; ================  EXPLOITS BLOCKED  =================
