add bus to c10m1_caves saferoom

--- a/cfg/stripper/zonemod/maps/c10m1_caves.cfg
+++ b/cfg/stripper/zonemod/maps/c10m1_caves.cfg
@@ -1,3 +1,14 @@
+; =====================================================
+; =============  ZONEMOD SAFEROOM STUFF  ==============
+; =====================================================
+add:
+{
+    "solid" "6"
+    "origin" "-12501 -14105 -67"
+    "angles" "1785 530 360"
+    "model"  "models/props_vehicles/bus01.mdl"
+    "classname" "prop_dynamic"
+}
 
 ; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
