enable l4d2_playstats stats writing

--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -60,3 +60,9 @@ confogl_addcvar slots_max_slots "30" // Maximum amount of slots players can vote
 // This plugin stops distance points accumulating whilst the tank is alive.
 
 //confogl_addcvar l4d_no_tank_rush "1"
+
+// [l4d2_playstats.smx]
+// -------------------------
+
+//confogl_addcvar sm_stats_debug "2"
+confogl_addcvar sm_stats_writestats "1"
