add custom plugins

--- a/cfg/cfgogl/zonemod/confogl_plugins.cfg
+++ b/cfg/cfgogl/zonemod/confogl_plugins.cfg
@@ -21,6 +21,7 @@ exec cfgogl/zonemod/shared_plugins.cfg
 //-------------------------------------------
 // ZoneMod 4v4
 //-------------------------------------------
+sm plugins load player_skill_stats
 sm plugins load optional/zonemod/l4d2_antibaiter.smx
 sm plugins load optional/zonemod/l4d2_nobhaps.smx
 sm plugins load optional/zonemod/l4d2_playstats.smx
