--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -185,6 +185,13 @@ sm plugins load optional/zonemod/slots_vote.smx
 
 // RL4D2L Plugins
 sm plugins load optional/zonemod/l4d_tank_rush.smx
+sm plugins load optional/zonemod/swamp_finale_fix.smx
+
+sm plugins load discord_webhook.smx
+sm plugins load discord_scoreboard.smx
+sm plugins load teleport_tank.smx
+sm plugins load spawn_secondary.smx
+sm plugins load suicideblitzfinalefix.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
