add one-way drop

--- a/cfg/stripper/zonemod/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/zonemod/maps/c3m1_plankcountry.cfg
@@ -1,4 +1,173 @@
 ; =====================================================
+; =============   RL4D2L ONE-WAY DROP   ===============
+; =====================================================
+
+add:
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-10999 9608 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-10999 9608 198"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-10999 9648 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-10999 9648 198"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11039 9648 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11039 9648 198"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11079 9648 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11079 9648 198"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11119 9648 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11119 9648 198"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11159 9648 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11159 9608 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11119 9608 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11079 9608 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-11039 9608 159"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "40 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-11068 9555 171.5"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "-40 90 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-11020 9555 171.5"
+}
+; --- Let SI jump up the one-way
+{
+    "origin" "-10972 9605 156"
+    "mins" "-6 -1.5 -13"
+    "maxs" "6 1.5 13"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "-10972 9604 165"
+    "mins" "-5 -1 -13"
+    "maxs" "5 1 13"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "-10972 9603 174"
+    "mins" "-2 -0.5 -13"
+    "maxs" "2 0.5 10"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 ; replace hr with ammo pile, replace t2any with t1any
