add infected ladder

--- a/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
@@ -1,4 +1,95 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; ---SI pipe ladder to get behind event holdout spot
+add:
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "3377 -3520 118"
+	"rendercolor" "255 255 0"
+}
+{
+    "origin" "3377 -3520 42"
+    "mins" "-6 -.5 -67"
+    "maxs" "6 .5 67"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "3377 -3521 33"
+    "mins" "-6 -.5 -58"
+    "maxs" "6 .5 58"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "3377 -3522 24"
+    "mins" "-6 -.5 -49"
+    "maxs" "6 .5 49"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "3377 -3523 15"
+    "mins" "-6 -.5 -40"
+    "maxs" "6 .5 40"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "3377 -3524 6"
+    "mins" "-6 -.5 -31"
+    "maxs" "6 .5 31"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "3377 -3525 -3"
+    "mins" "-6 -.5 -22"
+    "maxs" "6 .5 22"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-2014 -1803 238"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-2014 -1803 199"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-2014 -1843 199"
+}
+
+
+
+
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
