fix cvar error log messages

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -106,7 +106,7 @@ confogl_addcvar ammo_shotgun_max 96
 confogl_addcvar ammo_sniperrifle_max 80
 confogl_addcvar z_pushaway_force 0
 confogl_addcvar z_gun_swing_vs_min_penalty 1
-confogl_addcvar z_gun_swing_vs_min_penalty 4
+//confogl_addcvar z_gun_swing_vs_min_penalty 4
 confogl_addcvar z_leap_interval_post_incap 18
 confogl_addcvar z_jockey_control_variance 0.0
 confogl_addcvar z_exploding_shove_min 4
