--- a/cfg/cfgogl/zonemod/zonemod.cfg
+++ b/cfg/cfgogl/zonemod/zonemod.cfg
@@ -38,7 +38,7 @@ confogl_addcvar l4d2_dominators 0
 
 // [l4d2_playstats.smx + survivor_mvp]
 confogl_addcvar sm_survivor_mvp_brevity 0
-confogl_addcvar sm_survivor_mvp_brevity_latest 111
+//confogl_addcvar sm_survivor_mvp_brevity_latest 111
 confogl_addcvar sm_stats_autoprint_vs_round 8372
 
 // [l4d2_skill_detect.smx]
