--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -319,11 +319,16 @@ sm_weapon smg_silenced rangemod 0.79
 
 // Static Tank maps / flow Tank disabled
 static_tank_map c1m4_atrium
+static_tank_map c2m5_concert
 static_tank_map c4m5_milltown_escape
 static_tank_map c5m5_bridge
 static_tank_map c7m1_docks
 static_tank_map c7m3_port
+static_tank_map c8m5_rooftop
 static_tank_map c9m2_alleys
+static_tank_map c10m5_houseboat
+static_tank_map c11m5_runway
+static_tank_map c12m5_cornfield
 static_tank_map c13m2_southpinestream
 static_tank_map l4d2_darkblood04_extraction
 static_tank_map x1m5_salvation
@@ -336,13 +341,13 @@ static_tank_map dkr_m3_tunneloflove
 static_tank_map dkr_m4_ferris
 static_tank_map dkr_m5_stadium
 
-// Finales with flow + second event Tanks
-tank_map_flow_and_second_event c2m5_concert
-tank_map_flow_and_second_event c3m4_plantation
-tank_map_flow_and_second_event c8m5_rooftop
-tank_map_flow_and_second_event c10m5_houseboat
-tank_map_flow_and_second_event c11m5_runway
-tank_map_flow_and_second_event c12m5_cornfield
+// Finales with a single second event Tank
+tank_map_only_second_event c2m5_concert
+tank_map_only_second_event c3m4_plantation
+tank_map_only_second_event c8m5_rooftop
+tank_map_only_second_event c10m5_houseboat
+tank_map_only_second_event c11m5_runway
+tank_map_only_second_event c12m5_cornfield
 
 // Finales with a single first event Tank
 tank_map_only_first_event c1m4_atrium
