--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -64,5 +64,10 @@ confogl_addcvar slots_max_slots "30" // Maximum amount of slots players can vote
 // [l4d2_playstats.smx]
 // -------------------------
 
-//confogl_addcvar sm_stats_debug "2"
+confogl_addcvar sm_stats_debug "2"
 confogl_addcvar sm_stats_writestats "1"
+confogl_addcvar sm_tank_nowitch_debug "1"
+confogl_addcvar sm_tank_map_debug "1"
+
+// Debug confogl
+//confogl_debug "1"
