fix c7m3_port item spawns

--- a/cfg/stripper/zonemod/maps/c7m3_port.cfg
+++ b/cfg/stripper/zonemod/maps/c7m3_port.cfg
@@ -21,3 +21,21 @@ filter:
 {
 	"weapon_selection" "weapon_sniper_military"
 }
+
+; =====================================================
+; ================  FIXED ITEM SPAWNS  ================
+; =====================================================
+
+filter:
+{
+		"classname" "weapon_molotov_spawn"
+}
+{
+		"classname" "weapon_pipe_bomb_spawn"
+}
+{
+		"classname" "weapon_vomitjar_spawn"
+}
+{
+		"classname" "weapon_item_spawn"
+}
