remove l4d2_diescraper2_streets_361 medkits

--- a/cfg/stripper/zonemod/maps/l4d2_diescraper2_streets_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper2_streets_361.cfg
@@ -81,3 +81,26 @@ modify:
 		"OnIn" "directorForcePanicEvent1-1"
 	}
 }
+
+; --- Prevent medkit spawn
+modify:
+{
+	match:
+	{
+		"hammerid" "432636"
+	}
+	replace:
+	{
+		"item2" "0"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "633746"
+	}
+	replace:
+	{
+		"item2" "0"
+	}
+}
