--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -341,6 +341,7 @@ static_tank_map dkr_m2_carnival
 static_tank_map dkr_m3_tunneloflove
 static_tank_map dkr_m4_ferris
 static_tank_map dkr_m5_stadium
+static_tank_map l4d2_stadium5_stadium
 
 // Finales with a single second event Tank
 tank_map_only_second_event c2m5_concert
