move item spawn at end of c10m4_mainstreet away from saferoom

--- a/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
@@ -1,6 +1,18 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
+; --- move item spawner at the end of the level away from saferoom so non-pill spawns get removed
+modify:
+{
+	match:
+	{
+		"hammerid" "5821409"
+	}
+	replace:
+	{
+		"origin" "850 -5700 -47"
+	}
+}
 ; ---SI pipe ladder to get behind event holdout spot
 add:
 {
