fix l4d2_diescraper4_top_361 saferoom gun spawns

--- a/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
@@ -235,6 +235,16 @@ modify:
 		"weapon_selection" "any_shotgun"
 	}
 }
+{
+	match:
+	{
+		"hammerid" "625294"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
 
 
 ; Make ammo spawns consistent
