shorten l4d2_stadium5_stadium intro
Allow radio button to be pressed a second time earlier and add a glow to indicate it can be pressed again.

--- a/cfg/stripper/zonemod/maps/l4d2_stadium5_stadium.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium5_stadium.cfg
@@ -53,3 +53,33 @@ filter:
 	"classname" "trigger_once"
 	"origin" "-3918 -3715 224.5"
 }
+
+; Decrease wait time between first and second radio button press and make radio button glow when it can be pressed again
+modify:
+{
+	match:
+	{
+		"classname" "logic_relay"
+		"targetname" "btn_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "radio_btn_nopatienceUnlock15-1"
+	}
+	insert:
+	{
+		"OnTrigger" "radio_btn_nopatienceUnlock5-1"
+		"OnTrigger" "dummy_radioStartGlowing5-1"
+	}
+}
+; Turn off glow after second radio button press
+{
+	match:
+	{
+		"targetname" "btn_relay_haltall"
+	}
+	insert:
+	{
+		"OnTrigger" "dummy_radioStopGlowing0-1"
+	}
+}
