prevent l4d2_stadium1_apartment button room from being accessible before round is live

--- a/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
@@ -1,3 +1,16 @@
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;---- Block button room in warmup
+add:
+{
+    "origin" "-436 1500 -1800"
+    "mins" "-300 -200 0.1"
+    "maxs" "300 200 1"
+    "initialstate" "1"
+    "BlockType" "1"
+    "classname" "env_player_blocker"
+}
 ;---- Make random Tier 1 spawn a Shotgun and place an Uzi near it.
 modify:
 {
