fix l4d2_diescraper1_apartment_361 elevator damage

--- a/cfg/stripper/zonemod/maps/l4d2_diescraper1_apartment_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper1_apartment_361.cfg
@@ -49,12 +49,15 @@ modify:
 {
 	match:
 	{
-		"targetname" "apartment_elevator_damage"
+		"hammerid" "1511274"
 	}
-	replace:
+	delete:
 	{
-	"damagecap" "5"
-	"damage" "10"
+		"OnVersus" "apartment_elevator_damageSetDamage400-1"
+	}
+	insert:
+	{
+		"OnVersus" "apartment_elevator_damageSetDamage100-1"
 	}
 }
 
