remove c11m5_runway intro plane crash sound and shake

--- a/cfg/stripper/zonemod/maps/c11m5_runway.cfg
+++ b/cfg/stripper/zonemod/maps/c11m5_runway.cfg
@@ -1,4 +1,17 @@
 ; =====================================================
+; =========  NEXTMOD PLANE CRASH FX REMOVAL  ==========
+; =====================================================
+filter:
+{
+	; shake effect
+	"hammerid" "4290878"
+}
+{
+	; sound
+	"hammerid" "4155898"
+}
+
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 
