add light to new infected climb point on c10m4_mainstreet

--- a/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
@@ -15,6 +15,21 @@ modify:
 }
 ; ---SI pipe ladder to get behind event holdout spot
 add:
+; --- light up pipe
+{
+	"classname" "light_dynamic"
+	"_cone" "180"
+	"_inner_cone" "90"
+	"_light" "255 196 119 300"
+	"angles" "90 0 0"
+	"brightness" "2"
+	"distance" "75"
+	"pitch" "-90"
+	"spawnflags" "0"
+	"spotlight_radius" "250"
+	"targetname" "pipelight"
+	"origin" "3363 -3542 82"
+}
 {
 	"classname" "prop_dynamic"
 	"angles" "0 0 0"
