block access to upper rails and upper roof sections of saferoom greenhouse on c11m1_greenhouse

--- a/cfg/stripper/zonemod/maps/c11m1_greenhouse.cfg
+++ b/cfg/stripper/zonemod/maps/c11m1_greenhouse.cfg
@@ -1,4 +1,17 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- block roof access to SI without vertical mobility 
+add:
+{
+    "origin" "6282 -230 1020"
+    "mins" "-150 -40 -35"
+    "maxs" "150 40 5"
+    "initialstate" "1"
+    "BlockType" "2"
+    "classname" "env_physics_blocker"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
@@ -108,31 +121,31 @@ add:
 }
 
 ; =====================================================
-add:
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "5224 -752 922"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "5224 -752 954"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "5216 -752 922"
-}
+;add:
+;{
+;	"classname" "prop_dynamic"
+;	"angles" "0 0 0"
+;	"disableshadows" "1"
+;	"model" "models/props_urban/chimney002.mdl"
+;	"rendercolor" "255 255 255"
+;	"solid" "6"
+;	"origin" "5224 -752 922"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"angles" "0 0 0"
+;	"disableshadows" "1"
+;	"model" "models/props_urban/chimney002.mdl"
+;	"rendercolor" "255 255 255"
+;	"solid" "6"
+;	"origin" "5224 -752 954"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"angles" "0 0 0"
+;	"disableshadows" "1"
+;	"model" "models/props_urban/chimney002.mdl"
+;	"rendercolor" "255 255 255"
+;	"solid" "6"
+;	"origin" "5216 -752 922"
+;}
