remove clipbrushes from emergency door and move emergency sign up on c12m2_traintunnel

--- a/cfg/stripper/zonemod/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/zonemod/maps/c12m2_traintunnel.cfg
@@ -1,4 +1,38 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- Removes clipbrushes from emergency door
+filter:
+{
+    "hammerid" "1722759"
+}
+{
+    "hammerid" "1722713"
+}
+;--- Moves Emergency Sign up a bit so SI don't have to crouch to get through the door
+modify:
+{
+	match:
+	{
+		"hammerid" "1824168"
+	}
+	replace:
+	{
+		"origin" "-8572 -7532 -2"	
+	}
+}
+;modify:
+;{
+;	match:
+;	{
+;		"hammerid" "1121791"
+;	}
+;	insert:
+;	{
+;		"spawnflags" "524288"
+;	}
+;}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
