add easy way for SI to get on top of saferoom

--- a/cfg/stripper/zonemod/maps/c12m4_barn.cfg
+++ b/cfg/stripper/zonemod/maps/c12m4_barn.cfg
@@ -1,4 +1,39 @@
 ; =====================================================
+; ==============   RL4D2L ADDITIONS  ==================
+; =====================================================
+;--- Easy way for SI to get on top of the saferoom
+add:
+{
+	"classname" "prop_dynamic"
+	"angles" "40 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "7720 -11573.75 538"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "-40 90 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "7768 -11573.75 538"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "40 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "7720 -11720.75 414.75"
+}
+
+
+
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 
