--- a/cfg/cfgogl/rl4d2l/zonemod.cfg
+++ b/cfg/cfgogl/rl4d2l/zonemod.cfg
@@ -48,6 +48,8 @@ confogl_addcvar sm_skill_report_enable 1
 confogl_addcvar l4d2_MITSR_Amount 2
 confogl_addcvar l4d2_MITSR_FireAxe 2
 
+confogl_addcvar sm_stats_writestats 1
+
 // [l4d_mapbased_cvars.smx]
 l4d_mapcvars_configdir rl4d2l
 
