--- a/cfg/cfgogl/zm1v1/zm1v1.cfg
+++ b/cfg/cfgogl/zm1v1/zm1v1.cfg
@@ -34,5 +34,7 @@ l4d_wlimits_lock
 confogl_addcvar l4d2_meleecontrol_enable 1
 confogl_addcvar l4d2_meleecontrol_melee_penalty 6
 
+confogl_addcvar sm_stats_writestats 0
+
 // ZoneMod Shared Settings
 exec cfgogl/zonemod/shared_settings.cfg
