--- a/cfg/cfgogl/zm2v2/zm2v2.cfg
+++ b/cfg/cfgogl/zm2v2/zm2v2.cfg
@@ -41,5 +41,7 @@ confogl_addcvar sm_stats_autoprint_vs_round 8372
 confogl_addcvar l4d2_MITSR_Amount 1
 confogl_addcvar l4d2_MITSR_FireAxe 1
 
+confogl_addcvar sm_stats_writestats 0
+
 // ZoneMod Shared Settings
 exec cfgogl/zonemod/shared_settings.cfg
