--- a/cfg/cfgogl/zm3v3/zm3v3.cfg
+++ b/cfg/cfgogl/zm3v3/zm3v3.cfg
@@ -41,5 +41,7 @@ confogl_addcvar sm_stats_autoprint_vs_round 8372
 confogl_addcvar l4d2_MITSR_Amount 2
 confogl_addcvar l4d2_MITSR_FireAxe 2
 
+confogl_addcvar sm_stats_writestats 0
+
 // ZoneMod Shared Settings
 exec cfgogl/zonemod/shared_settings.cfg
