--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -188,11 +188,11 @@ sm plugins load optional/zonemod/l4d_tank_rush.smx
 sm plugins load optional/zonemod/swamp_finale_fix.smx
 sm plugins load optional/zonemod/l4d2_restartmap.smx
 
-sm plugins load discord_webhook.smx
-sm plugins load discord_scoreboard.smx
-sm plugins load teleport_tank.smx
-sm plugins load spawn_secondary.smx
-sm plugins load suicideblitzfinalefix.smx
+sm plugins load optional/zonemod/discord_webhook.smx
+sm plugins load optional/zonemod/discord_scoreboard.smx
+sm plugins load optional/zonemod/teleport_tank.smx
+sm plugins load optional/zonemod/spawn_secondary.smx
+sm plugins load optional/zonemod/suicideblitzfinalefix.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
