--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -68,6 +68,8 @@ confogl_addcvar sm_stats_debug "2"
 confogl_addcvar sm_tank_nowitch_debug "1"
 confogl_addcvar sm_tank_map_debug "1"
 confogl_addcvar sm_teleport_tank_debug "1"
+confogl_addcvar sm_restartmap_debug "1"
+confogl_addcvar tankcontrol_debug "1"
 
 // Debug confogl
-//confogl_debug "1"
+confogl_debug "1"
