add discord_scoreboard_webhook_cfg and l4d2_playstats_database_cfg cvars

--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -70,6 +70,8 @@ confogl_addcvar sm_tank_map_debug "1"
 confogl_addcvar sm_teleport_tank_debug "1"
 confogl_addcvar sm_restartmap_debug "1"
 confogl_addcvar tankcontrol_debug "1"
+confogl_addcvar discord_scoreboard_webhook_cfg "discord_scoreboard"
+confogl_addcvar l4d2_playstats_database_cfg "l4d2_playstats"
 
 // Debug confogl
 confogl_debug "1"
