remove fix to l4d2_diescraper1_apartment_361 elevator damage
elevator does 20 damage again

--- a/cfg/stripper/zonemod/maps/l4d2_diescraper1_apartment_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper1_apartment_361.cfg
@@ -45,21 +45,21 @@ modify:
 ;}
 
 ; --- Make it so elevator drop only does 5 damage to each survivor.
-modify:
-{
-	match:
-	{
-		"hammerid" "1511274"
-	}
-	delete:
-	{
-		"OnVersus" "apartment_elevator_damageSetDamage400-1"
-	}
-	insert:
-	{
-		"OnVersus" "apartment_elevator_damageSetDamage100-1"
-	}
-}
+;modify:
+;{
+;	match:
+;	{
+;		"hammerid" "1511274"
+;	}
+;	delete:
+;	{
+;		"OnVersus" "apartment_elevator_damageSetDamage400-1"
+;	}
+;	insert:
+;	{
+;		"OnVersus" "apartment_elevator_damageSetDamage100-1"
+;	}
+;}
 
 ; --- Mess around with the sewer lights and make them on after all the flickering.
 modify:
