remove fake warehouse door prop from c8m3_sewers
the prop was used to prevent GL from opening the door, but there's no GL in zonemod and it was just preventing wall bangs

--- a/cfg/stripper/zonemod/maps/c8m3_sewers.cfg
+++ b/cfg/stripper/zonemod/maps/c8m3_sewers.cfg
@@ -68,31 +68,31 @@ filter:
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
 
-add:
+;add:
 ; --- add fake warehousedoor to prevent GL opening the path
-{
-    ; extra prop blocking door
-    "solid" "6"
-    "origin" "10994 7520 10"
-    "angles" "0 180 0"
-    "targetname" "door_sliding_fake"
-	"disableshadows" "1"
-    "model" "models/props_mill/rollup_door01.mdl"
-    "classname" "prop_dynamic"
-}
+;{
+;    ; extra prop blocking door
+;    "solid" "6"
+;    "origin" "10994 7520 10"
+;    "angles" "0 180 0"
+;    "targetname" "door_sliding_fake"
+;	"disableshadows" "1"
+;    "model" "models/props_mill/rollup_door01.mdl"
+;    "classname" "prop_dynamic"
+;}
 ; <remove fake door on button press>
-modify:
-{
-    match:
-    {
-        ; button, now also removes fake door
-        "hammerid" "3901541"
-    }
-    insert:
-    {
-        "OnPressed" "door_sliding_fakeKill0-1"
-    }
-}
+;modify:
+;{
+;    match:
+;    {
+;        ; button, now also removes fake door
+;        "hammerid" "3901541"
+;    }
+;    insert:
+;    {
+;        "OnPressed" "door_sliding_fakeKill0-1"
+;    }
+;}
 add:
 ; --- block gas station roof exploit
 {
