--- a/cfg/cfgogl/zonemod/confogl_plugins.cfg
+++ b/cfg/cfgogl/zonemod/confogl_plugins.cfg
@@ -30,6 +30,8 @@ sm plugins load optional/zonemod/l4d2_dominatorscontrol.smx
 sm plugins load optional/zonemod/tank_and_nowitch_ifier.smx
 sm plugins load optional/zonemod/autopause.smx
 sm plugins load optional/zonemod/l4d_mapbased_cvars.smx
+sm plugins load optional/zonemod/discord_webhook.smx
+sm plugins load optional/zonemod/discord_scoreboard.smx
 
 //----------------------------
 // Lock Plugins
