--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -69,6 +69,7 @@ confogl_addcvar sm_tank_nowitch_debug "1"
 confogl_addcvar sm_tank_map_debug "1"
 confogl_addcvar sm_teleport_tank_debug "1"
 confogl_addcvar sm_restartmap_debug "1"
+confogl_addcvar l4d_no_tank_rush_debug "1"
 confogl_addcvar tankcontrol_debug "1"
 confogl_addcvar discord_scoreboard_webhook_cfg "discord_scoreboard"
 confogl_addcvar l4d2_playstats_database_cfg "l4d2_playstats"
