remove button room trigger and make button trigger horde instead

--- a/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
@@ -11,6 +11,24 @@ add:
     "BlockType" "1"
     "classname" "env_player_blocker"
 }
+;Replace zombie trigger by making the button spawn the horde instead
+filter:
+{
+	"hammerid" "1388440"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "91959"
+	}
+	insert:
+	{
+		"OnPressed" "cons_bombTrigger1-1"
+	}
+}
+
+
 ;---- Make random Tier 1 spawn a Shotgun and place an Uzi near it.
 modify:
 {
