--- a/cfg/cfgogl/rl4d2l/zonemod.cfg
+++ b/cfg/cfgogl/rl4d2l/zonemod.cfg
@@ -55,3 +55,5 @@ l4d_mapcvars_configdir rl4d2l
 
 // Shared Settings
 exec cfgogl/zonemod/shared_settings.cfg
+
+exec cfgogl/rl4d2l/static_tank_control.cfg
