--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -189,6 +189,7 @@ sm plugins load optional/zonemod/l4d2_restartmap.smx
 sm plugins load optional/zonemod/teleport_tank.smx
 sm plugins load optional/zonemod/spawn_secondary.smx
 sm plugins load optional/zonemod/suicideblitzfinalefix.smx
+sm plugins load optional/zonemod/static_tank_control.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
