--- a/cfg/cfgogl/zonemod/zonemod.cfg
+++ b/cfg/cfgogl/zonemod/zonemod.cfg
@@ -55,3 +55,5 @@ l4d_mapcvars_configdir zonemod
 
 // Shared Settings
 exec cfgogl/zonemod/shared_settings.cfg
+
+exec cfgogl/zonemod/static_tank_control.cfg
