add saferoom gnome

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -190,6 +190,7 @@ sm plugins load optional/zonemod/teleport_tank.smx
 sm plugins load optional/zonemod/spawn_secondary.smx
 sm plugins load optional/zonemod/suicideblitzfinalefix.smx
 sm plugins load optional/zonemod/static_tank_control.smx
+sm plugins load optional/zonemod/saferoom_gnome.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
