--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -74,6 +74,7 @@ confogl_addcvar tankcontrol_debug "1"
 confogl_addcvar static_tank_control_debug "1"
 confogl_addcvar discord_scoreboard_webhook_cfg "discord_scoreboard"
 confogl_addcvar l4d2_playstats_database_cfg "l4d2_playstats"
+confogl_addcvar sm_saferoom_gnome_debug "1"
 
 // Debug confogl
 confogl_debug "1"
