--- a/cfg/cfgogl/rl4d2l/zonemod.cfg
+++ b/cfg/cfgogl/rl4d2l/zonemod.cfg
@@ -40,6 +40,7 @@ confogl_addcvar l4d2_dominators 0
 confogl_addcvar sm_survivor_mvp_brevity 0
 //confogl_addcvar sm_survivor_mvp_brevity_latest 111
 confogl_addcvar sm_stats_autoprint_vs_round 8372
+confogl_addcvar l4d2_playstats_customcfg rl4d2l
 
 // [l4d2_skill_detect.smx]
 confogl_addcvar sm_skill_report_enable 1
