add L4D2-Competitive-Rework v0.6.6 stripper files

--- a/cfg/stripper/zonemod/maps/c12m1_hilltop.cfg
+++ b/cfg/stripper/zonemod/maps/c12m1_hilltop.cfg
@@ -96,13 +96,12 @@ add:
 add:
 ; --- prevent SI getting stuck in large ditch near starting area (confogl only)
 {
-    ; toppled tree ramp in ditch
-    "solid" "6"
-    "origin" "-8384 -13632 -506"
-    "angles" "-54 0 0"
-    "model" "models/gm_forest/deadtrunk.mdl"
-    "disableshadows" "1"
-    "classname" "prop_dynamic_override"
+    ; realistic bus ramp in ditch
+	"solid" "6"
+	"origin" "-8234 -13779 -463"
+	"angles" "1035 -119 360"
+	"model"	 "models/props_vehicles/bus01.mdl"
+	"classname"	"prop_dynamic"
 }
 
 ; =====================================================
