--- a/cfg/stripper/zonemod/maps/c12m5_cornfield.cfg
+++ b/cfg/stripper/zonemod/maps/c12m5_cornfield.cfg
@@ -197,3 +197,51 @@ add:
 }
 
 ; =====================================================
+; ============= OUT OF MAP EXPLOIT FIXES  =============
+; =====================================================
+add:
+{
+	"origin" "8775 4872 455"
+    "mins" "-400 -200 -45"
+    "maxs" "400 200 45"
+    "initialstate" "1"
+    "BlockType" "3"
+    "classname" "env_physics_blocker"
+}
+{
+	"origin" "8504 4901 507"
+    "mins" "-120 -60 -200"
+    "maxs" "120 60 200"
+    "initialstate" "1"
+    "BlockType" "3"
+    "classname" "env_physics_blocker"
+}
+{
+	"origin" "7030 4209 376"
+    "mins" "-3000 -150 -300"
+    "maxs" "300 150 300"
+    "initialstate" "1"
+    "BlockType" "3"
+    "classname" "env_physics_blocker"
+}
+{
+	"solid" "6"
+	"origin" "11075 4814 37"
+	"angles" "0 33 0"
+	"model"	 "models\props_foliage\swamp_rock01.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "11089 4764 67"
+	"angles" "0 18 0"
+	"model"	 "models\props_foliage\swamp_rock02.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "10975 4816 -7"
+	"angles" "0 112 0"
+	"model"	 "models\props_foliage\swamp_rock02.mdl"
+	"classname"	"prop_dynamic"
+}
