--- a/cfg/stripper/zonemod/maps/c2m1_highway.cfg
+++ b/cfg/stripper/zonemod/maps/c2m1_highway.cfg
@@ -19,6 +19,38 @@ modify:
 		"angles" "0 0 0"
     }
 }
+
+add:
+; -- Hittable Police Car near Saferoom
+{
+	"origin" "8838 8432 -576"
+	"angles" "0 184 0"
+	"model"	 "models/props_vehicles/police_car_rural.mdl"
+	"classname"	"prop_physics"
+}
+; -- Bus at the Saferoom
+{
+	"solid" "6"
+	"origin" "9943 8308 -536"
+	"angles" "0 148 0"
+	"model"	 "models/props_vehicles/bus01_2.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- Ambulance on the Highway
+{
+	"solid" "6"
+	"origin" "3426 4290 -1008"
+	"angles" "0 171 0"
+	"model"	 "models/props_vehicles/ambulance.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- Hittable Taxi on the Highway
+{
+	"origin" "3387 5116 -1008"
+	"angles" "0 128 0"
+	"model"	 "models/props_vehicles/taxi_city.mdl"
+	"classname"	"prop_physics"
+}
 ; =====================================================
 ; =====  EXTRA AMMO PILES IN STRATEGIC LOCATIONS ======
 ; =====================================================
