--- a/cfg/stripper/zonemod/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/zonemod/maps/c2m3_coaster.cfg
@@ -330,6 +330,22 @@ filter:
 }
 
 ; =====================================================
+; ============  PRO MOD ADDITIONAL MELEE   ============
+; =====================================================
+
+add:
+{
+	"classname" "weapon_melee_spawn"
+	"angles" "0 240 90"
+	"count" "1"
+	"disableshadows" "1"
+	"melee_weapon" "fireaxe"
+	"solid" "0"
+	"spawnflags" "2"
+	"origin" "-2537.91 2380.99 1.10389"
+}
+
+; =====================================================
 ; ============  PRO MOD PILL MODIFICATION   ===========
 ; =====================================================
 
