--- a/cfg/stripper/zonemod/maps/c5m2_park.cfg
+++ b/cfg/stripper/zonemod/maps/c5m2_park.cfg
@@ -79,43 +79,145 @@ add:
     "health" "10"
     "classname" "ambient_generic"
 }
-{
-	"classname" "logic_relay"
-	"origin" "-9563 -6041 -143"
-	"targetname" "backup_cutoff_trigger_relay"
-	"StartDisabled" "0"
-	"spawnflags" "0"
-    "OnTrigger" "fort_block_jet_approach_sound,PlaySound,,0.5,-1"
-    "OnTrigger" "fort_block_strike_sound,PlaySound,,2.5,-1"
-	"OnTrigger" "sky_invisible_block,Enable,,0,-1"
-	"OnTrigger" "sky_invisible_block2,Enable,,0,-1"
-	"OnTrigger" "fort_block,addoutput,origin -8054 -2720 -256,0,-1"
-	"OnTrigger" "fort_block2,addoutput,origin -7925 -2720 -256,0,-1"
-	"OnTrigger" "fort_block3,addoutput,origin -8067 -1696 -256,0,-1"
-	"OnTrigger" "fort_block4,addoutput,origin -7938 -1696 -256,0,-1"
-	"OnTrigger" "finale_cleanse_entrance_door,Open,,0,-1"
-	"OnTrigger" "finale_cleanse_entrance_door,Lock,,0.8,-1"
-}
+
+; -- Ceda Trailer
 modify:
 {
     match:
     {
-        "hammerid" "1239243"
+		"hammerid" "452213"
     }
     insert:
     {
-        "OnOpen" "backup_cutoff_trigger_relayTrigger0.1-1"
+		"OnStartTouch" "fort_block_jet_approach_sound,PlaySound,,0.5,-1"
+		"OnStartTouch" "fort_block_strike_sound,PlaySound,,2.5,-1"
+		"OnStartTouch" "sky_invisible_block,Enable,,0,-1"
+		"OnStartTouch" "sky_invisible_block2,Enable,,0,-1"
+		"OnStartTouch" "fort_block,addoutput,origin -8054 -2720 -256,0,-1"
+		"OnStartTouch" "fort_block2,addoutput,origin -7925 -2720 -256,0,-1"
+		"OnStartTouch" "fort_block3,addoutput,origin -8067 -1696 -256,0,-1"
+		"OnStartTouch" "fort_block4,addoutput,origin -7938 -1696 -256,0,-1"
+		"OnStartTouch" "fort_block4,addoutput,origin -7938 -1696 -256,0,-1"
     }
 }
+
+filter:
 {
-    match:
-    {
-        "hammerid" "2231111"
-    }
-    delete:
-    {
-        "OnTrigger" "finale_cleanse_entrance_doorLock0-1"
-    }
+	; -- Ceda Entrance Door
+	"hammerid" "1654134"
+}
+{
+	; -- Ceda Entrance Door Push Effect.
+	"hammerid" "2219214"
+}
+{
+	; -- Navblocker backdoor
+	"hammerid" "1602039"
+}
+{
+	; -- Glass from Ceda Entrance Door.
+	"hammerid" "1833276"
+}
+
+add:
+{
+	; -- Add a non-solid Fallen Ceda door in the Trailer for "Realism"
+	"solid" "0"
+	"origin" "-9628 -5684 -203"
+	"angles" "450 267 0"
+	"model"	 "models/props_vehicles/ceda_door_rotating.mdl"
+	"classname"	"prop_dynamic"
+}
+
+modify:
+{
+	; -- Tell the Branch Logic to only care about all Survivors being in the Trailer.
+	match:
+	{
+		"hammerid" "1653451"
+	}
+	delete:
+	{
+		"Branch01" "ceda_trailer_doorclosed_branch"
+		"Branch02" "ceda_trailer_allinside_branch"
+	}
+	insert:
+	{
+		"Branch01" "ceda_trailer_allinside_branch"
+	}
+}
+
+
+filter:
+; --- Trash can in the alley
+{
+	"hammerid" "453597"
+}
+
+add:
+; -- Right side of the Park for Spawn/Cover.
+{
+	"solid" "6"
+	"origin" "-5759 -295 -240"
+	"angles" "0 183 0"
+	"model"	 "models/props_urban/gate_wall001_256.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- Right side of the Park for Spawn/Cover.
+{
+	"solid" "0"
+	"origin" "-5787 -422 -304"
+	"angles" "0 92 0"
+	"model"	 "models/props_fortifications/concrete_wall001_96_reference.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- SI Assist up the Tree to get on the Gazebo
+{
+	"solid" "6"
+	"origin" "-7864 -3491 -82"
+	"angles" "0 94 0"
+	"model"	 "models/props/de_inferno/wood_fence_end.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- Tempting Risky Hittable for Tank.
+{
+	"origin" "-5044 -2304 -136"
+	"angles" "0 99 0"
+	"model"	 "models/props_vehicles/cara_82hatchback_wrecked.mdl"
+	"classname"	"prop_physics"
+	
+}
+; -- Some help if the Tank has to rush through the Alley.
+{
+	"solid" "6"
+	"origin" "-7872 -3315 -274"
+	"angles" "0 -88 0"
+	"model"	 "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- Extra Spawn near the Alley.
+{
+	"solid" "6"
+	"origin" "-7797 -2734 -260"
+	"angles" "0 181 0"
+	"model"	 "models/props_foliage/urban_hedge_128_64_high.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- Extra spawn on the left side of the Park.
+{
+	"solid" "6"
+	"origin" "-6238 -4118 -264"
+	"angles" "0 220 0"
+	"model"	 "models/props_foliage/urban_hedge_128_64_high.mdl"
+	"classname"	"prop_dynamic"
+}
+; -- SI Assist up the Tree to get on the Gazebo
+{
+	"solid" "6"
+	"origin" "-7808 -3813 -213"
+	"angles" "0 0 0"
+	"model"	 "models/props_urban/gate_wall002_128.mdl"
+	"classname"	"prop_dynamic"
 }
 
 ; =====================================================
