--- a/cfg/stripper/zonemod/maps/l4d2_diescraper2_streets_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper2_streets_361.cfg
@@ -1,5 +1,28 @@
 ; Diescraper Redux 2
 
+; --- Prevent medkit spawn
+modify:
+{
+	match:
+	{
+		"hammerid" "432636"
+	}
+	replace:
+	{
+		"item2" "0"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "633746"
+	}
+	replace:
+	{
+		"item2" "0"
+	}
+}
+
 ; --- Remove end saferoom pills.
 filter:
 {
