--- a/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
@@ -1,5 +1,18 @@
 ; Diescraper Redux 4
 
+; Make sure we have both an uzi and shotgun in saferoom.
+modify:
+{
+	match:
+	{
+		"hammerid" "625294"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+
 ; Block death window as you approach finale area
 add:
 {
