--- a/cfg/stripper/zonemod/global_filters.cfg
+++ b/cfg/stripper/zonemod/global_filters.cfg
@@ -27,28 +27,6 @@ filter:
 }
 
 ; =====================================================
-; ================ ZONEMOD MELEE REMOVAL  =============
-; =====================================================
-filter:
-{
-	"classname" "weapon_melee_spawn"
-}
-{
-	"classname" "weapon_melee"
-}
-modify:
-{
-	match:
-	{
-		"classname" "weapon_item_spawn"
-	}
-	delete:
-	{
-		"melee_weapon" "Any"
-	}
-}
-
-; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 modify:
@@ -91,12 +69,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"solid" "6"
 		"model" "models/props/cs_office/light_shop.mdl"
 	}
-insert:
+	insert:
 	{
 		"solid" "0"
 	}
@@ -104,12 +82,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"solid" "6"
 		"model" "models/props/cs_office/light_shopb.mdl"
 	}
-insert:
+	insert:
 	{
 		"solid" "0"
 	}
@@ -117,12 +95,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_junk/wood_pallet001a.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -130,12 +108,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_street/garbage_can.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -143,12 +121,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_interiors/paper_tray.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -156,12 +134,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_interiors/computer_monitor.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -169,12 +147,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_interiors/phone.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -182,12 +160,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props/cs_office/trash_can.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -195,12 +173,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_interiors/chairlobby01.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -208,12 +186,12 @@ insert:
 
 modify:
 {
-match:
+	match:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_interiors/chair_office2.mdl"
 	}
-insert:
+	insert:
 	{
 		"spawnflags" "4"
 	}
@@ -2938,21 +2916,26 @@ replace:
 		"classname" "trigger_hurt"
 	}
 }
-; Stop Intro Freeze, credit to Sir
-filter:
-{
-	"targetname" "relay_intro_setup"
-}
+; =====================
+; Intro Removal!
+; =====================
 modify:
 {
-match:
+	match:
 	{
 		"targetname" "relay_intro_start"
 	}
-insert:
+	delete:
 	{
-		"OnTrigger" "camera_introDisable0-1"
-		"OnTrigger" "relay_intro_finishedTrigger1-1"
+		"OnTrigger" "@directorForceSurvivorPositions0-1"
+		"OnTrigger" "directorForceSurvivorPositions0-1"
+		"OnTrigger" "fade_introFade0-1"
+		"OnTrigger" "fx_introEnable0-1"
+		"OnTrigger" "fx_introKill*-1"
+	}
+	insert:
+	{
+		"OnTrigger" "relay_intro_survivor_camerasTrigger0-1"
 	}
 }
 ; =====================================================
@@ -2999,3 +2982,15 @@ replace:
 }
 
 ; =====================================================
+; THROWABLES BEGONE 
+; =====================================================
+filter:
+{
+	"classname" "weapon_molotov_spawn"
+}
+{
+	"classname" "weapon_pipe_bomb_spawn"
+}
+{
+	"classname" "weapon_vomitjar_spawn"
+}
