--- a/cfg/stripper/zonemod/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/zonemod/maps/c2m2_fairgrounds.cfg
@@ -30,6 +30,7 @@ add:
 	"model" "models/props_fairgrounds/tol_tunnel_heart.mdl"
 	"solid" "6"
 	"origin" "-4448.52 -5503.66 63.3769"
+}
 {
 	"classname" "prop_dynamic"
 	"angles" "0 270 0"
@@ -67,6 +68,15 @@ add:
 	"model" "models/props_fairgrounds/tol_tunnel_heart.mdl"
 	"solid" "6"
 	"origin" "-4885.52 -5503.66 -132.623"
+}
+{
+    "classname" "prop_dynamic"
+    "angles" "0 0 0"
+    "body" "0"
+    "disableshadows" "1"
+    "model" "models/props_fairgrounds/tol_tunnel_heart.mdl"
+    "solid" "6"
+    "origin" "-4448.52 -5503.66 63.3769"
 }
 
 ; =====================================================
@@ -121,18 +131,6 @@ add:
         "disableshadows" "1"
         "count" "5"
         "angles" "0 0 0"
-}
-
-; =====================================================
-; ================  DOOR REMOVAL  =====================
-; =====================================================
-
-filter:
-{
-	"classname" "prop_door_rotating"
-}
-{
-	"classname" "func_door_rotating"
 }
 
 ; =====================================================
