--- a/cfg/stripper/zonemod/maps/c3m2_swamp.cfg
+++ b/cfg/stripper/zonemod/maps/c3m2_swamp.cfg
@@ -31,10 +31,100 @@ filter:
 ;{
 ;	"targetname" "parachute_2_itemshelf"
 ;}
+
+; =====================================================
+; ================= ZONEMOD CHANGES ===================
+; =====================================================
+
+add:
+{
+	"solid" "6"
+	"origin" "-4970 3946 14"
+	"angles" "0 81 0"
+	"model"	 "models/props_foliage/swamp_cypress_small01.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "848 3336 18"
+	"angles" "0 -175 0"
+	"model"	 "models/props_foliage/swamp_cluster01.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "291 2515 -14"
+	"angles" "0 167 0"
+	"model"	 "models/props_foliage/swamp_shrubwall_block_512_deep.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "1390 3114 77"
+	"angles" "0 11 0"
+	"model"	 "models/props_foliage/trees_cluster01.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "-4540 4060 0"
+	"angles" "0 25 0"
+	"model"	 "models/props_foliage/old_tree01.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "8238 2470 130"
+	"angles" "0 9 0"
+	"model"	 "models/props_foliage/swamp_shrubwall_256_deep.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "1682 2177 35"
+	"angles" "0 135 0"
+	"model"	 "models/props_foliage/swamp_cypress_large01_grnd.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "8226 1620 121"
+	"angles" "0 205 0"
+	"model"	 "models/props_vehicles/ambulance.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "0"
+	"origin" "-424 1645 -16"
+	"angles" "0 178 0"
+	"model"	 "models/props_foliage/swamp_shrubwall_256a.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "-480 4156 -16"
+	"angles" "0 26 0"
+	"model"	 "models/props_foliage/swamp_shrubwall_block_512_deep.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "0"
+	"origin" "-225 2002 -20"
+	"angles" "0 101 0"
+	"model"	 "models/props_foliage/swamp_shrubwall_256a.mdl"
+	"classname"	"prop_dynamic"
+}
+{
+	"solid" "6"
+	"origin" "-328 1852 -46"
+	"angles" "0 121 0"
+	"model"	 "models/props_foliage/swamp_cluster_water.mdl"
+	"classname"	"prop_dynamic"
+}
+
 ; =====================================================
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
-add:
 ; --- block climbing broken house for jesus spot/tank unreachable (before plane)
 {
     ; invisible block above house
