--- a/cfg/stripper/zonemod/maps/c9m2_lots.cfg
+++ b/cfg/stripper/zonemod/maps/c9m2_lots.cfg
@@ -1,21 +1,8 @@
-; =====================================================
-; ===============  PILL CABINET TWEAK  ================
-; =====================================================
-
-; --- set pill cabs to have a max of 2 pills
-
-modify:
+; --- filter out restricted junk
+filter:
 {
-	match:
-	{
-		"model" "models/props_interiors/medicalcabinet02.mdl"
-	}
-	replace:
-	{
-		"HealthCount" "2"
-	}
+	"classname" "weapon_item_spawn"
 }
-
 
 ; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
@@ -40,7 +27,6 @@ filter:
 {
 	"weapon_selection" "weapon_sniper_military"
 }
-
 ; =====================================================
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
