--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -191,6 +191,7 @@ sm plugins load optional/zonemod/spawn_secondary.smx
 sm plugins load optional/zonemod/suicideblitzfinalefix.smx
 sm plugins load optional/zonemod/static_tank_control.smx
 sm plugins load optional/zonemod/saferoom_gnome.smx
+sm plugins load optional/zonemod/whitelist_database.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
