l4d2_diescraper4_top_361 updates
* remove the two most annoying doors that can't be broken by SI near radio button
* remove glass in radio room that SI can't break, but almost always breaks immediately from gunfire
* add small invisible blocker that blocks the ball hittable from falling into the staircase fully

--- a/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
@@ -1,4 +1,33 @@
 ; Diescraper Redux 4
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- Annoyance fixes
+;--- Remove the two most annoying doors that can't be broken by SI near radio button
+filter:
+{
+	"hammerid" "192234"
+}
+{
+	"hammerid" "184335"
+}
+;--- Glass in radio room that SI can't break, almost always breaks immediately from gunfire but
+;--- a team might feel robbed if a charger collides with the window that would've deathcharged
+{
+	"hammerid" "275263"
+}
+;--- Add small invisible blocker that blocks the ball hittable from falling into the staircase fully
+add:
+{
+	"origin" "615 610 -128"
+	"mins" "-330 0 -139"
+	"boxmins" "-330 0 -139"
+	"maxs" "0 15 0"
+	"boxmaxs" "0 15 0"
+	"initialstate" "1"
+	"BlockType" "4"
+	"classname" "env_physics_blocker"
+}
 
 ; Block death window as you approach finale area
 add:
