remove glow from non-hittable car in l4d2_stadium1_apartment

--- a/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
@@ -11,9 +11,9 @@ add:
     "BlockType" "1"
     "classname" "env_player_blocker"
 }
-;Replace zombie trigger by making the button spawn the horde instead
 filter:
 {
+	;Zombie spawn trigger
 	"hammerid" "1388440"
 }
 modify:
@@ -27,7 +27,33 @@ modify:
 		"OnPressed" "cons_bombTrigger1-1"
 	}
 }
-
+;--- Remove glowing non-hittable and replace with a dynamic prop
+filter:
+{
+	"hammerid" "2151795"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "2151811"
+	}
+	replace:
+	{
+		"parentname" "newcar6"
+	}
+}
+add:
+{
+	"origin" "1384 496.105 -3853"
+	"targetname" "newcar6"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_vehicles/cara_95sedan.mdl"
+	"angles" "-0.0697843 149.999 1.99878"
+	"classname" "prop_dynamic"
+}
 
 ;---- Make random Tier 1 spawn a Shotgun and place an Uzi near it.
 modify:
