block jail cafeteria room skip in l4d2_stadium3_city1

--- a/cfg/stripper/zonemod/maps/l4d2_stadium3_city1.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium3_city1.cfg
@@ -1,3 +1,25 @@
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- block jail pull-down skip 
+add:
+{
+	"origin" "543 5888 -73"
+	"mins" "-8 -116 -100"
+	"maxs" "0 0 100"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "504.75 5772 -142"
+	"mins" "-18 0 0"
+	"maxs" "0 0 100"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+
 ;---- Remove Random T2 Spawner (Does not get converted to T1)
 filter:
 {
