--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -145,7 +145,7 @@ sm plugins load optional/zonemod/l4d2_shadow_removal.smx
 sm plugins load optional/zonemod/l4d2_dominatorscontrol.smx
 sm plugins load optional/zonemod/l4dhots.smx
 sm plugins load optional/zonemod/MeleeInTheSafeRoom.smx
-sm plugins load optional/zonemod/l4d2_antigodframer.smx
+//sm plugins load optional/zonemod/l4d2_antigodframer.smx
 sm plugins load optional/zonemod/l4d2_duplicate_survivor_fix.smx
 
 //----------------------
