l4d2_stadium5_stadium SI can no longer get stuck in bushes above saferoom

--- a/cfg/stripper/zonemod/maps/l4d2_stadium5_stadium.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium5_stadium.cfg
@@ -1,4 +1,35 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- stop SI from getting stuck in the bushes above the saferoom
+add:
+{
+    "origin" "6385 -4744 381"
+    "mins" "0 -20 0"
+    "maxs" "300 0 120"
+    "initialstate" "1"
+    "BlockType" "3"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "6672 -4478 381"
+    "mins" "0 -20 0"
+    "maxs" "300 0 120"
+    "initialstate" "1"
+    "BlockType" "3"
+    "classname" "env_physics_blocker"
+}
+{
+    "origin" "5320 -4478 381"
+    "mins" "0 -20 0"
+    "maxs" "1070 0 120"
+    "initialstate" "1"
+    "BlockType" "3"
+    "classname" "env_physics_blocker"
+}
+
+
+; =====================================================
 ; =================== Suicide Blitz 5 =================
 ; =====================================================
 
