l4d2_vs_stadium2_riverwalk remove pills from end saferoom

--- a/cfg/stripper/zonemod/maps/l4d2_vs_stadium2_riverwalk.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_vs_stadium2_riverwalk.cfg
@@ -1,3 +1,20 @@
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- Remove 4 pills at end safe house
+filter:
+{
+	"hammerid" "5195057"
+}
+{
+	"hammerid" "5195059"
+}
+{
+	"hammerid" "5195061"
+}
+{
+	"hammerid" "5195063"
+}
 add:
 ;---- Add Exploding Barrel at Event
 {
